# business-development-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  supabase.py
app/models/: base.py
app/routes/: health.py
app/schemas/: application.py  base.py  bd_profile_assignment.py  document.py  profile.py  user.py
app/services/: base.py
supabase/migrations/: 20260222000000_create_initial_schema.sql
tests/: conftest.py  test_health.py
