[project]
name = "business-development-backend"
version = "0.1.0"
description = "Business Development Backend API"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.1.0",
    "fastapi>=0.129.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "supabase>=2.0.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
]

# ── Ruff (linter + formatter) ───────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__", ".git", "migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest ───────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
